Header + padding tweak

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
     <title>QuizStuff</title>
   </head>
   <body>
-    <nav>
-      <a href="index.html" class="logo-container">
-        <h1>QuizStuff</h1>
-        <span>Quizzing Software</span>
-      </a>
-      <ul id="sticky">
-        <li><a class="current" href="index.html">Home</a></li>
-        <li><a href="downloads.html">Downloads</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li>
-          <a
-            href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
-            >Store</a
-          >
-        </li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <a href="index.html" class="logo-container">
+          <h1>QuizStuff</h1>
+          <span>Quizzing Software</span>
+        </a>
+        <ul id="sticky">
+          <li><a class="current" href="index.html">Home</a></li>
+          <li><a href="downloads.html">Downloads</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
+          <li>
+            <a
+              href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
+              >Store</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <section>
       <div class="container">
