Alt text to images

--- a/downloads.html
+++ b/downloads.html
@@ -42,7 +42,7 @@
           free upgrades!
         </p>
 
-        <img src="windows.png" alt="" />
+        <img src="windows.png" alt="Microsoft Windows icon." />
         <a
           href="http://www.quizstuff.com/zencart/index.php?main_page=login"
           class="button"
@@ -60,7 +60,7 @@
           System version 10 is preferred.
         </p>
 
-        <img src="windows.png" alt="" />
+        <img src="windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 5.4.J3</a>
       </div>
 
@@ -72,7 +72,7 @@
           computers.
         </p>
 
-        <img src="windows.png" alt="" />
+        <img src="windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 4.2.L55</a>
       </div>
 
@@ -85,7 +85,7 @@
           information about using QMServer.
         </p>
 
-        <img src="pdf-file.png" alt="" />
+        <img src="pdf-file.png" alt="PDF icon." />
         <a href="#" class="button">Download the User Manual</a>
       </div>
     </section>
