--- a/faqs.html
+++ b/faqs.html
@@ -68,7 +68,7 @@
           practice with QMServer. See the download section for the User Manual.
         </p>
 
-        <img id="HIW" src="HIW.gif" alt="" />
+        <img id="HIW" src="HIW.gif" alt="Hardware diagram." />
 
         <a
           href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
