Replace import with font-face

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="Ostrich 1.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-
+    <script src="script.js" defer></script>
     <title>QuizStuff</title>
   </head>
+
   <body>
-    <header>
+    <header id="header">
       <nav>
         <a href="index.html" class="logo-container">
           <h1>QuizStuff</h1>
-          <span>Quizzing Software</span>
         </a>
-        <ul id="sticky">
-          <li><a class="current" href="index.html">Home</a></li>
+        <ul>
+          <li><a class="current" href="index.html">Overview</a></li>
           <li><a href="downloads.html">Downloads</a></li>
+          <li><a href="#">Changelog</a></li>
           <li><a href="faqs.html">FAQs</a></li>
           <li>
             <a
@@ -150,5 +151,4 @@
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
     </footer>
   </body>
-  <script src="script.js" defer></script>
 </html>
