Fix nav and colors
Changed background color to black and made the navs match on each page. Also added margin to ul links in nav for mobile.

--- a/downloads.html
+++ b/downloads.html
@@ -10,15 +10,15 @@
     <title>Downloads - QuizStuff</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav>
         <a href="index.html" class="logo-container">
           <h1>QuizStuff</h1>
-          <span>Quizzing Software</span>
         </a>
-        <ul id="sticky">
-          <li><a href="index.html">Home</a></li>
-          <li><a class="current" href="downloads.html">Downloads</a></li>
+        <ul>
+          <li><a class="current" href="index.html">Overview</a></li>
+          <li><a href="downloads.html">Downloads</a></li>
+          <li><a href="#">Changelog</a></li>
           <li><a href="faqs.html">FAQs</a></li>
           <li>
             <a
