--- a/faqs.html
+++ b/faqs.html
@@ -10,16 +10,16 @@
     <title>FAQs - QuizStuff</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav>
         <a href="index.html" class="logo-container">
           <h1>QuizStuff</h1>
-          <span>Quizzing Software</span>
         </a>
-        <ul id="sticky">
-          <li><a href="index.html">Home</a></li>
+        <ul>
+          <li><a class="current" href="index.html">Overview</a></li>
           <li><a href="downloads.html">Downloads</a></li>
-          <li><a class="current" href="faqs.html">FAQs</a></li>
+          <li><a href="#">Changelog</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
           <li>
             <a
               href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
