Update "current"  class on pages

--- a/faqs.html
+++ b/faqs.html
@@ -16,10 +16,10 @@
           <h1>QuizStuff</h1>
         </a>
         <ul>
-          <li><a class="current" href="index.html">Overview</a></li>
+          <li><a href="index.html">Overview</a></li>
           <li><a href="downloads.html">Downloads</a></li>
           <li><a href="#">Changelog</a></li>
-          <li><a href="faqs.html">FAQs</a></li>
+          <li><a class="current" href="faqs.html">FAQs</a></li>
           <li>
             <a
               href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
