--- a/downloads.html
+++ b/downloads.html
@@ -16,8 +16,8 @@
           <h1>QuizStuff</h1>
         </a>
         <ul>
-          <li><a class="current" href="index.html">Overview</a></li>
-          <li><a href="downloads.html">Downloads</a></li>
+          <li><a href="index.html">Overview</a></li>
+          <li><a class="current" href="downloads.html">Downloads</a></li>
           <li><a href="#">Changelog</a></li>
           <li><a href="faqs.html">FAQs</a></li>
           <li>
