--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <header id="header">
       <nav>
         <a href="index.html" class="logo-container">
+          <img
+            class="ostrich-icon"
+            src="./assets/images/ostritch_final_1.png"
+            alt="Ostrich Logo"
+          />
           <h1>QuizStuff</h1>
         </a>
         <ul>
