Added black png + footer links
Links open new tab

--- a/faqs.html
+++ b/faqs.html
@@ -157,10 +157,13 @@
         <h1>Church of The Nazarene Links</h1>
         <a
           href="https://nazarene.org/who-we-are/organization/ministries/nazarene-youth-international"
+          target="_blank"
           >Nazarene Youth International</a
         >
 
-        <a href="http://www.nazquizzing.org/pages/37-tournament-web-sites"
+        <a
+          href="http://www.nazquizzing.org/pages/37-tournament-web-sites"
+          target="_blank"
           >Nazarene Quizzing Tournaments</a
         >
       </div>
