--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img
             class="ostrich-icon"
             src="./assets/images/ostritch_final_1.png"
-            alt="Ostrich Logo"
+            alt="An ostrich wearing glasses."
           />
           <h1>QuizStuff</h1>
         </a>
@@ -37,6 +37,10 @@
     </header>
 
     <section>
+      <div id="canvas">
+        <div id="radial-1"></div>
+        <div id="radial-2"></div>
+      </div>
       <div class="container">
         <h1 class="container-header">Latest Updates</h1>
 
