--- a/downloads.html
+++ b/downloads.html
@@ -10,6 +10,10 @@
     <title>Downloads - QuizStuff</title>
   </head>
   <body>
+    <div id="canvas">
+      <div id="radial-1"></div>
+      <div id="radial-2"></div>
+    </div>
     <header id="header">
       <nav>
         <a href="index.html" class="logo-container">
@@ -20,18 +24,31 @@
           />
           <h1>QuizStuff</h1>
         </a>
-        <ul>
-          <li><a href="index.html">Overview</a></li>
-          <li><a class="current" href="downloads.html">Downloads</a></li>
-          <li><a href="#">Changelog</a></li>
-          <li><a href="faqs.html">FAQs</a></li>
-          <li>
-            <a
-              href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
-              >Store</a
-            >
-          </li>
-        </ul>
+        <div id="header-links-wrapper">
+          <ul id="header-links">
+            <li><a href="index.html">Overview</a></li>
+            <li><a class="current" href="downloads.html">Downloads</a></li>
+            <li><a href="#">Changelog</a></li>
+            <li><a href="faqs.html">FAQs</a></li>
+            <li>
+              <a
+                href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
+                >Store</a
+              >
+            </li>
+          </ul>
+        </div>
+        <button class="icon mobile-only" onclick="toggleNavOpen()">
+          <svg
+            class="ham-icon"
+            viewBox="0 0 100 100"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path style="stroke-miterlimit: 6" d="M 0 20 L 100 20" />
+            <path style="stroke-miterlimit: 6" d="M 0 50 L 100 50" />
+            <path style="stroke-miterlimit: 6" d="M 0 80 L 100 80" />
+          </svg>
+        </button>
       </nav>
     </header>
 
