--- a/faqs.html
+++ b/faqs.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="Ostrich 1.jpg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/ostritch_final_1.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>FAQs - QuizStuff</title>
   </head>
   <body>
+    <div id="canvas">
+      <div id="radial-1"></div>
+      <div id="radial-2"></div>
+    </div>
     <header id="header">
       <nav>
         <a href="index.html" class="logo-container">
@@ -20,18 +28,31 @@
           />
           <h1>QuizStuff</h1>
         </a>
-        <ul>
-          <li><a href="index.html">Overview</a></li>
-          <li><a href="downloads.html">Downloads</a></li>
-          <li><a href="#">Changelog</a></li>
-          <li><a class="current" href="faqs.html">FAQs</a></li>
-          <li>
-            <a
-              href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
-              >Store</a
-            >
-          </li>
-        </ul>
+        <div id="header-links-wrapper">
+          <ul id="header-links">
+            <li><ahref="index.html">Overview</a></li>
+            <li><a href="downloads.html">Downloads</a></li>
+            <li><a href="#">Changelog</a></li>
+            <li><a class="current" href="faqs.html">FAQs</a></li>
+            <li>
+              <a
+                href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
+                >Store</a
+              >
+            </li>
+          </ul>
+        </div>
+        <button class="icon mobile-only" onclick="toggleNavOpen()">
+          <svg
+            class="ham-icon"
+            viewBox="0 0 100 100"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path style="stroke-miterlimit: 6" d="M 0 20 L 100 20" />
+            <path style="stroke-miterlimit: 6" d="M 0 50 L 100 50" />
+            <path style="stroke-miterlimit: 6" d="M 0 80 L 100 80" />
+          </svg>
+        </button>
       </nav>
     </header>
 
