--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <ul id="header-links">
             <li><a class="current" href="index.html">Overview</a></li>
             <li><a href="downloads.html">Downloads</a></li>
-            <li><a href="#">Changelog</a></li>
+            <!-- <li><a href="#">Changelog</a></li> -->
             <li><a href="faqs.html">FAQs</a></li>
             <li>
               <a
