--- a/downloads.html
+++ b/downloads.html
@@ -28,7 +28,7 @@
           <ul id="header-links">
             <li><a href="index.html">Overview</a></li>
             <li><a class="current" href="downloads.html">Downloads</a></li>
-            <li><a href="#">Changelog</a></li>
+            <!-- <li><a href="#">Changelog</a></li> -->
             <li><a href="faqs.html">FAQs</a></li>
             <li>
               <a
