--- a/faqs.html
+++ b/faqs.html
@@ -32,7 +32,7 @@
           <ul id="header-links">
             <li><a href="index.html">Overview</a></li>
             <li><a href="downloads.html">Downloads</a></li>
-            <li><a href="#">Changelog</a></li>
+            <!-- <li><a href="#">Changelog</a></li> -->
             <li><a class="current" href="faqs.html">FAQs</a></li>
             <li>
               <a
