--- a/faqs.html
+++ b/faqs.html
@@ -94,7 +94,7 @@
           practice with QMServer. See the download section for the User Manual.
         </p>
 
-        <img id="HIW" src="HIW.gif" alt="Hardware diagram." />
+        <img id="HIW" src="./assets/images/HIW.gif" alt="Hardware diagram." />
 
         <a
           href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
@@ -193,7 +193,10 @@
           >Nazarene Quizzing Tournaments</a
         >
       </div>
-      <img src="Ostrich 1.jpg" alt="A crazy ostrich with a jetpack!" />
+      <img
+        src="./assets/images/Ostrich 1.jpg"
+        alt="A crazy ostrich with a jetpack!"
+      />
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
     </footer>
   </body>
