--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
           >Nazarene Quizzing Tournaments</a
         >
       </div>
-      <img src="Ostrich 1.jpg" alt="A crazy ostrich with a jetpack!" />
+      <img
+        src="./assets/images/Ostrich 1.jpg"
+        alt="A crazy ostrich with a jetpack!"
+      />
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
     </footer>
   </body>
