--- a/downloads.html
+++ b/downloads.html
@@ -68,7 +68,7 @@
           free upgrades!
         </p>
 
-        <img src="windows.png" alt="Microsoft Windows icon." />
+        <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
         <a
           href="http://www.quizstuff.com/zencart/index.php?main_page=login"
           class="button"
@@ -86,7 +86,7 @@
           System version 10 is preferred.
         </p>
 
-        <img src="windows.png" alt="Microsoft Windows icon." />
+        <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 5.4.J3</a>
       </div>
 
@@ -98,7 +98,7 @@
           computers.
         </p>
 
-        <img src="windows.png" alt="Microsoft Windows icon." />
+        <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 4.2.L55</a>
       </div>
 
@@ -111,7 +111,7 @@
           information about using QMServer.
         </p>
 
-        <img src="pdf-file.png" alt="PDF icon." />
+        <img src="./assets/images/pdf-file.png" alt="PDF icon." />
         <a href="#" class="button">Download the User Manual</a>
       </div>
     </section>
@@ -131,7 +131,10 @@
           >Nazarene Quizzing Tournaments</a
         >
       </div>
-      <img src="Ostrich 1.jpg" alt="A crazy ostrich with a jetpack!" />
+      <img
+        src="./assets/images/Ostrich 1.jpg"
+        alt="A crazy ostrich with a jetpack!"
+      />
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
     </footer>
   </body>
