Adding store directory

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </nav>
     </header>
 
-    <section>
-      <div class="container">
+    <main>
+      <section class="container">
         <h1 class="container-header">Latest Updates</h1>
 
         <p class="container-text">
@@ -80,9 +80,9 @@
           interface boxes. Thank you for your patience as we have purchased all
           the material and anticipate the program to work soon after testing.
         </p>
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Are Your Clone Pads Falling Apart?</h1>
 
         <p class="container-text">
@@ -90,9 +90,9 @@
           glue for longer life). Cost is dependent on what needs to be done. A
           proposal for costs will be sent for approval.
         </p>
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Pads Are Being Made As Fast As We Can</h1>
 
         <p class="container-text">
@@ -106,9 +106,9 @@
           interface boxes. We CANNOT guarantee the pads to work with any other
           equipment.
         </p>
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Laptops For Sale</h1>
 
         <p class="container-text">
@@ -122,9 +122,9 @@
           class="button"
           >Visit Store</a
         >
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Disclaimers</h1>
 
         <ul class="container-text">
@@ -158,8 +158,8 @@
           </li>
           <br />
         </ul>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <footer>
       <div class="footer-links">
