Use semantic main and sections

--- a/downloads.html
+++ b/downloads.html
@@ -56,8 +56,8 @@
       </nav>
     </header>
 
-    <section>
-      <div class="container">
+    <main>
+      <section class="container">
         <h1 class="container-header">Purchase QuizMachine</h1>
 
         <p class="container-text">
@@ -75,9 +75,9 @@
         >
           Purchase &nbsp;&nbsp; 5.4.J30</a
         >
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Download A Free Trial</h1>
 
         <p class="container-text">
@@ -88,9 +88,9 @@
 
         <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 5.4.J3</a>
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Download A Free Trial</h1>
 
         <p class="container-text">
@@ -100,9 +100,9 @@
 
         <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 4.2.L55</a>
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Download A Free User Manual</h1>
 
         <p class="container-text">
@@ -113,8 +113,8 @@
 
         <img src="./assets/images/pdf-file.png" alt="PDF icon." />
         <a href="#" class="button">Download the User Manual</a>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <footer>
       <div class="footer-links">
