--- a/faqs.html
+++ b/faqs.html
@@ -56,8 +56,8 @@
       </nav>
     </header>
 
-    <section>
-      <div class="container">
+    <main>
+      <section class="container">
         <h1 class="container-header">OK, how does this all work?</h1>
 
         <p class="container-text">
@@ -101,9 +101,9 @@
           class="button"
           >Order Equippment</a
         >
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">USB Interface Box And Pads</h1>
 
         <p class="container-text">
@@ -127,9 +127,9 @@
           class="button"
           >Order Equippment</a
         >
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container">
         <h1 class="container-header">Some Common Issues</h1>
 
         <p class="container-text">
@@ -175,8 +175,8 @@
           For more support please contact us at <u>quizstuff@quizstuff.com</u>.
           <br /><br /><br />
         </p>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <footer>
       <div class="footer-links">
