Update all href and src to absolute paths

--- a/downloads.html
+++ b/downloads.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/ostritch_final_1.png"
+      href="/assets/images/ostritch_final_1.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="/script.js" defer></script>
     <title>Downloads - QuizStuff</title>
   </head>
   <body>
@@ -20,20 +20,20 @@
     </div>
     <header id="header">
       <nav>
-        <a href="index.html" class="logo-container">
+        <a href="/" class="logo-container">
           <img
             class="ostrich-icon"
-            src="./assets/images/ostritch_final_1.png"
+            src="/assets/images/ostritch_final_1.png"
             alt="An ostrich wearing glasses."
           />
           <h1>QuizStuff</h1>
         </a>
         <div id="header-links-wrapper">
           <ul id="header-links">
-            <li><a href="index.html">Overview</a></li>
-            <li><a class="current" href="downloads.html">Downloads</a></li>
+            <li><a href="/">Overview</a></li>
+            <li><a class="current" href="/downloads.html">Downloads</a></li>
             <!-- <li><a href="#">Changelog</a></li> -->
-            <li><a href="faqs.html">FAQs</a></li>
+            <li><a href="/faqs.html">FAQs</a></li>
             <li>
               <a
                 href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
@@ -68,7 +68,7 @@
           free upgrades!
         </p>
 
-        <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
+        <img src="/assets/images/windows.png" alt="Microsoft Windows icon." />
         <a
           href="http://www.quizstuff.com/zencart/index.php?main_page=login"
           class="button"
@@ -86,7 +86,7 @@
           System version 10 is preferred.
         </p>
 
-        <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
+        <img src="/assets/images/windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 5.4.J3</a>
       </section>
 
@@ -98,7 +98,7 @@
           computers.
         </p>
 
-        <img src="./assets/images/windows.png" alt="Microsoft Windows icon." />
+        <img src="/assets/images/windows.png" alt="Microsoft Windows icon." />
         <a href="#" class="button">Download &nbsp;&nbsp; 4.2.L55</a>
       </section>
 
@@ -111,7 +111,7 @@
           information about using QMServer.
         </p>
 
-        <img src="./assets/images/pdf-file.png" alt="PDF icon." />
+        <img src="/assets/images/pdf-file.png" alt="PDF icon." />
         <a href="#" class="button">Download the User Manual</a>
       </section>
     </main>
@@ -132,7 +132,7 @@
         >
       </div>
       <img
-        src="./assets/images/Ostrich 1.jpg"
+        src="/assets/images/Ostrich 1.jpg"
         alt="A crazy ostrich with a jetpack!"
       />
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
