--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/ostritch_final_1.png"
+      href="/assets/images/ostritch_final_1.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="/script.js" defer></script>
     <title>QuizStuff</title>
   </head>
 
@@ -21,20 +21,20 @@
     </div>
     <header id="header">
       <nav>
-        <a href="index.html" class="logo-container">
+        <a href="/" class="logo-container">
           <img
             class="ostrich-icon"
-            src="./assets/images/ostritch_final_1.png"
+            src="/assets/images/ostritch_final_1.png"
             alt="An ostrich wearing glasses."
           />
           <h1>QuizStuff</h1>
         </a>
         <div id="header-links-wrapper">
           <ul id="header-links">
-            <li><a class="current" href="index.html">Overview</a></li>
-            <li><a href="downloads.html">Downloads</a></li>
+            <li><a class="current" href="/">Overview</a></li>
+            <li><a href="/downloads.html">Downloads</a></li>
             <!-- <li><a href="#">Changelog</a></li> -->
-            <li><a href="faqs.html">FAQs</a></li>
+            <li><a href="/faqs.html">FAQs</a></li>
             <li class="dropdown">
               <button onclick="toggleOpen(this)">
                 Store
@@ -204,7 +204,7 @@
         >
       </div>
       <img
-        src="./assets/images/Ostrich 1.jpg"
+        src="/assets/images/Ostrich 1.jpg"
         alt="A crazy ostrich with a jetpack!"
       />
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
