--- a/faqs.html
+++ b/faqs.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/ostritch_final_1.png"
+      href="/assets/images/ostritch_final_1.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="/script.js" defer></script>
     <title>FAQs - QuizStuff</title>
   </head>
   <body>
@@ -20,20 +20,20 @@
     </div>
     <header id="header">
       <nav>
-        <a href="index.html" class="logo-container">
+        <a href="/" class="logo-container">
           <img
             class="ostrich-icon"
-            src="./assets/images/ostritch_final_1.png"
+            src="/assets/images/ostritch_final_1.png"
             alt="An ostrich wearing glasses."
           />
           <h1>QuizStuff</h1>
         </a>
         <div id="header-links-wrapper">
           <ul id="header-links">
-            <li><a href="index.html">Overview</a></li>
-            <li><a href="downloads.html">Downloads</a></li>
+            <li><a href="/">Overview</a></li>
+            <li><a href="/downloads.html">Downloads</a></li>
             <!-- <li><a href="#">Changelog</a></li> -->
-            <li><a class="current" href="faqs.html">FAQs</a></li>
+            <li><a class="current" href="/faqs.html">FAQs</a></li>
             <li>
               <a
                 href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
@@ -94,7 +94,7 @@
           practice with QMServer. See the download section for the User Manual.
         </p>
 
-        <img id="HIW" src="./assets/images/HIW.gif" alt="Hardware diagram." />
+        <img id="HIW" src="/assets/images/HIW.gif" alt="Hardware diagram." />
 
         <a
           href="http://www.quizstuff.com/zencart/index.php?main_page=login&zenid=502e276d8dbff6ccf0d336295bd5ffdb"
@@ -194,7 +194,7 @@
         >
       </div>
       <img
-        src="./assets/images/Ostrich 1.jpg"
+        src="/assets/images/Ostrich 1.jpg"
         alt="A crazy ostrich with a jetpack!"
       />
       <small>© 2008-<span class="current-year">2023</span> QuizStuff</small>
